--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -56,7 +56,7 @@ img{
 .search-area{
   display: flex;
   flex-direction: column;
-  flex: 3;
+  flex: 4;
   width:100%;
   height:100%;
 }
@@ -96,11 +96,9 @@ td {
   padding: 0.5em 1em;
 }
 
-/* Add this to your existing index.css file or create a new one */
-
 .accordion {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 1px;
   border: 1px solid #ddd;
   border-radius: 5px;
   overflow: hidden;
@@ -111,8 +109,8 @@ td {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
-  background-color: #3498db;
+  padding: 3%;
+  background-color: rgba(25,46,89,255);
   color: #fff;
   font-weight: bold;
   cursor: pointer;
@@ -137,7 +135,7 @@ td {
 
 /* Hover effect for label */
 .accordion-label:hover {
-  background-color: #2980b9;
+  background-color: #122242;
 }
 
 /* Arrow icon for label */
