--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -4,7 +4,7 @@
   <div class="nitk-header">
     <div class="container">
       <header class="d-flex justify-content-center py-3">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><%= image_tag('header.png') %></a></li>
+        <li class="nav-item"><a href="https://www.nitk.ac.in/" class="nav-link active" aria-current="page"><%= image_tag('header.png') %></a></li>
       </header>
     </div>
   </div>
@@ -16,7 +16,7 @@
           <h1 class="fw-light">TELEPHONE DIRECTORY TEAM</h1>
           <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
           <p>
-            <a href="#web-team" class="btn btn-primary my-2 active">Web Team</a>
+            <a href="#web-team" class="btn btn-primary my-2 web-team" >Web Team</a>
             <a href="#app-team" class="btn btn-success my-2">App Team</a>
           </p>
         </div>
@@ -29,7 +29,6 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('Dir_Passport_size_photo.jpg' , class: 'card-img-top img-fluid', alt: 'Director Image') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
               <p class="card-text">Prof. B. Ravi</p>
               <p class="card-text">Director</p>
@@ -46,7 +45,6 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('mr-br-chandravarkar.jpg' , class: 'card-img-top img-fluid', alt: 'Professor Image') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
                 <p class="card-text">Dr.B.R.Chandravarkar</p>
                 <p class="card-text">Department: CSE</p>
@@ -65,11 +63,10 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('Anish.jpg' , class: 'card-img-top img-fluid', alt: 'Mentor Image') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
                         <div class="card-body">
-                          <p class="card-text">\Anish Kumbhar</p>
+                          <p class="card-text">Anish Kumbhar</p>
                           <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2025 </p>
+                          <p class="card-text"> B.Tech, 2025 </p>
                           <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
@@ -85,11 +82,11 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('Megha_final.jpg' , class: 'card-img-top img-fluid', alt: 'Web Team Image 3') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+              
               <div class="card-body">
                 <p class="card-text">Megha Arya</p>
                 <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2026 </p>
+                          <p class="card-text"> B.Tech, 2026 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
@@ -104,11 +101,10 @@
           <div class="col" id="web-team">
             <div class="card shadow-sm">
               <%= image_tag('Poorva_final.jpg' , class: 'card-img-top img-fluid', alt: 'Web Team Image 1') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
                 <p class="card-text">Bhagwat Poorva Milind</p>
                           <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2026 </p>
+                          <p class="card-text"> B.Tech, 2026 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
@@ -123,11 +119,10 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('Reema_final.jpg', class: 'card-img-top img-fluid', alt: 'Web Team Image 2') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
                 <p class="card-text">Reema Murthy</p>
                 <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2026 </p>
+                          <p class="card-text"> B.Tech, 2026 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
@@ -143,11 +138,10 @@
           <div class="col" id="app-team">
             <div class="card shadow-sm">
               <%= image_tag('Ansh.jpg' , class: 'card-img-top img-fluid', alt: 'App Team Image 1') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
                 <p class="card-text">Ansh Vivek Malhotra</p>
                 <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2026 </p>
+                          <p class="card-text"> B.Tech, 2026 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
@@ -162,11 +156,10 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('Chirag.jpg' , class: 'card-img-top img-fluid', alt: 'App Team Image 2') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
                 <p class="card-text">Chirag S</p>
                 <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2026 </p>
+                          <p class="card-text"> B.Tech, 2026 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
@@ -181,11 +174,10 @@
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('Rishabh.jpg' , class: 'card-img-top img-fluid', alt: 'App Team Image 3') %>
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               <div class="card-body">
                 <p class="card-text">Rishabh Mahor</p>
                 <p class="card-text">Department: CSE</p>
-                          <p class="card-text"> B.Tech,2026 </p>
+                          <p class="card-text"> B.Tech, 2026 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
