--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -125,7 +125,6 @@ td {
 
 .accordion-content p {
   margin: 0;
-  padding: 10px;
   border-bottom: 1px solid #ddd;
 }
 
@@ -148,4 +147,60 @@ td {
 
 .accordion.open .accordion-label::after {
   transform: rotate(-90deg);
+}
+
+ul.tree,
+ul.tree ul {
+  list-style: none;
+  margin-left: 5%;
+  padding: 0;
+}
+
+ul.tree ul {
+  margin-left: 10px;
+}
+
+ul.tree li {
+  margin: 0;
+  padding: 0 7px;
+  line-height: 20px;
+  color: #000;
+  font-weight: normal;
+  line-height: 150%;
+  border-left: 1px solid rgb(100, 100, 100);
+
+}
+
+ul.tree li:last-child {
+  border-left: none;
+}
+
+ul.tree li:before {
+  position: relative;
+  top: -0.3em;
+  height: 1em;
+  width: 12px;
+  color: white;
+  border-bottom: 1px solid rgb(100, 100, 100);
+  content: "";
+  display: inline-block;
+  left: -7px;
+}
+
+ul.tree li:last-child:before {
+  border-left: 1px solid rgb(100, 100, 100);
+}
+
+.subdirectory-option {
+  font-weight: 500;
+  color: rgba(25,46,89,255);
+  padding: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+@media screen {
+  .subdirectory-option {
+    cursor: pointer;
+  }
 }
