--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Poppins&family=Tilt+Neon&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "/javascript/application.js", "data-turbo-track": "reload", defer: true %>
+    <link rel="icon" type="image/png" href="<%=asset_path('nitk_favicon.png')%>">
   </head>
 
   <body>
