--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -3,7 +3,7 @@
   <div class="nitk-header">
     <div class="container">
       <header class="d-flex justify-content-center py-3">
-        <li class="nav-item"><a href="https://www.nitk.ac.in/" class="nav-link active" aria-current="page"><%= image_tag 'header.png' %></a></li>
+        <div class="nav-item"><a href="https://www.nitk.ac.in/" class="nav-link active" aria-current="page"><%= image_tag 'header.png' %></a></div>
       </header>
     </div>
   </div>
@@ -33,7 +33,7 @@
                         <%= subdirectory.title %>
                         </li>
                       <% end %>
-                    </li>
+                    </ul>
                   </div>
               </p>
             <% else %>
