--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -22,38 +22,30 @@
 </style>
 
 <%= form_for_filterrific @filterrific, { class: 'filterrific-form', id: 'submission' } do |f| %>
-  <div class="row g-3">
+  <div class="row g-3" >
     <!-- Name Field -->
-    <div class="col-md-4 col-sm-12">
-      <%= f.label :search_query, "Name", class: "form-label", style: "color:white;" %>
-      <%= f.text_field :search_query, class: "form-control", id: "filterrific_submit_button"  %>
+    <div class="col-md-4 col-sm-12" style="margin: 30px 0px 0px;">
+      
+      <%= f.text_field :search_query, placeholder: "Search Name", class: "form-control", id: "filterrific_submit_button"  %>
     </div>
 
     <!-- Search Button -->
-    <div class="col-md-1 mt-5 col-sm-12" >
+    <div class="col-md-1  col-sm-12" style="margin:30px 0px 0px">
       <%= f.submit "Search", class: "btn btn-success" %>
     </div>
 
-    <!-- Advanced Search Button -->
-    <div class="col-md-7 mt-5 col-sm-12">
-      <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0;">Advanced Search</button>
-    </div>
-
-    <!-- Advanced Search Fields -->
-    <div class="col-md-4 col-sm-6" id="filterrific_with_department_id" style= "display:none;">
-      <%= f.label :with_department_id_advanced, "Search By Department", class: "form-label", style: "color:white;" %>
+    <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style= "margin: 30px 0px 24px 0px; display:none;">
+      
       <%= f.select :with_department_id_advanced, [['All Branches', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
     </div>
 
-    <div class="col-md-4 col-sm-6" id="filterrific_search_designation" style= "display:none;">
-      <%= f.label :search_designation_advanced, "Search By Designation", class: "form-label", style: "color:white;" %>
-      <%= f.text_field :search_designation_advanced, class: "form-control" %>
+    <!-- Advanced Search Button -->
+    <div class="col-md-3  col-sm-12" style="margin: 30px 0px 0px; !important">
+      <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px ;">Advanced Search</button>
     </div>
 
-    <div class="col-md-4 col-sm-6" id="filterrific_sub_directory_id" style= "display:none;">
-      <%= f.label :sub_directory_id_advanced, "Search By Sub-Department", class: "form-label", style: "color:white;" %>
-      <%= f.select :sub_directory_id_advanced, [['All Sub-Departments', nil]] + @filterrific.select_options[:sub_directory_id], { style: 'text-decoration: none;' }, class: "form-select" %>
-    </div>
+    <!-- Advanced Search Fields -->
+    
 
   </div>
 <% end %>
