--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -66,7 +66,7 @@
         <th class="firstend"> Sl. No. </th>
         <th style="text-align: ;"> Name </th>
         <th > Designation </th>
-        <th > Landline (Off.) </th>
+        <th > Contact </th>
         <th class="lastend"> Details </th>
       </tr>
     </thead>
