--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -33,7 +33,7 @@
 
     <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style= "margin: 30px 0px 24px 0px; display:none;">
       
-      <%= f.select :with_department_id_advanced, [['All Branches', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
+      <%= f.select :with_department_id_advanced, [['All sections', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
     </div>
 
     <!-- Advanced Search Button -->
