--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -77,7 +77,7 @@
       <tr>
         <th class="firstend"> Sl. No. </th>
         <th style="text-align: ;"> Name </th>
-        <th > Designation </th>
+        <th > Section </th>
         <th > Contact </th>
         <th class="lastend"> Details </th>
       </tr>
