--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -22,26 +22,7 @@
         </div>
       </div>
     </section>
-
-    <div class="album py-5 bg-body-tertiary">
-      <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col">
-            <div class="card shadow-sm">
-              <%= image_tag('Dir_Passport_size_photo.jpg' , class: 'card-img-top img-fluid', alt: 'Director Image') %>
-              <div class="card-body">
-              <p class="card-text">Prof. B. Ravi</p>
-              <p class="card-text">Director</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">LinkedIn</button>
-                 </div>
-                  <small class="text-body-secondary">Director</small>
-                </div>
-              </div>
-            </div>
-          </div>
+    
           <div class="col">
             <div class="card shadow-sm">
               <%= image_tag('mr-br-chandravarkar.jpg' , class: 'card-img-top img-fluid', alt: 'Professor Image') %>
@@ -55,6 +36,26 @@
                     <button type="button" class="btn btn-sm btn-outline-secondary">LinkedIn</button>
                     </div>
                   <small class="text-body-secondary">Facutly Incharge</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+<div class="album py-5 bg-body-tertiary">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="col">
+            <div class="card shadow-sm">
+              <%= image_tag('Dir_Passport_size_photo.jpg' , class: 'card-img-top img-fluid', alt: 'Director Image') %>
+              <div class="card-body">
+              <p class="card-text">Faculty Staff</p>
+              <p class="card-text">Faculty Staff</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">LinkedIn</button>
+                 </div>
+                  <small class="text-body-secondary">Faculty staff</small>
                 </div>
               </div>
             </div>
